# uwp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RENDERING.md  index.html  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  vite.config.ts  wrangler.jsonc
.claude/: launch.json
.husky/: pre-commit
crates/planet-render/: Cargo.toml
crates/planet-render/src/: camera.rs  gpu.rs  lib.rs  mesh.rs  params.rs  renderer.rs  shader.rs  system.rs  wasm_api.rs
crates/planet-render/src/domain/: blackbody.rs  climate.rs  mod.rs  stability.rs  subsector.rs  surface_atlas.rs  surface_map.rs  surface_prebake.rs  system.rs
crates/planet-render/src/scenes/: detail.rs  mod.rs  system.rs
crates/planet-render/src/shaders/: atmosphere.wgsl  background.wgsl  common.wgsl  planet.wgsl  system.wgsl
crates/planet-render/src/shaders/chunks/: agx.wgsl
docs/: ARCHITECTURE.md  BACKLOG.md  CEPHEUS_CHAPTER_12.md  LICENSING.md  RENDERING.md  SURFACE_ALIGNMENT.md  VISUAL_REFERENCE_REVIEW.md  sector-data-format.md
e2e/: import.e2e.ts  region-view.e2e.ts  render-smoke.e2e.ts  render-visual.e2e.ts  surface-visual.e2e.ts
public/: _headers
scripts/: check-architecture.mjs  check-diagrams.mjs  check-ip-guardrails.mjs  render-diagrams.mjs
src/: app.tsx  buildId.ts  exporter.ts  gpuProbe.ts  main.tsx  params.ts  regionRender.test.ts  regionRender.ts  renderProfile.test.ts  renderProfile.ts  state.ts  styles.css  subsectorClient.ts  systemVisualMapping.test.ts  systemVisualMapping.ts  uwp.test.ts  uwp.ts  uwpDescriptions.ts  wasm.ts  (+4 more)
(+79 files in other folders)
