[package]
name = "planet-render"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "24", default-features = false, features = ["wgsl", "webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Performance",
  "Window",
  "console",
]

[dev-dependencies]
naga = { version = "24.0.0", features = ["wgsl-in"] }
